--- a/index.html
+++ b/index.html
@@ -11,6 +11,26 @@
     <script defer src="app.js"></script>
   </head>
   <body>
-    <h1>color flipper</h1>
+    <nav >
+      <div class="nav-center">
+        <h4>color flipper</h4>
+        <ul class="nav-links">
+          <li><a href="index.html">simple</a></li>
+          <li><a href="hex.html">hex</a></li>
+          <li><a href="rgb.html">rgb</a></li>
+          <li><a href="hsl.html">hsl</a></li>
+        </ul>
+      </div>
+    <main>
+      <h1>color flipper</h1>
+    <h2>Color de fondo
+      <span class="color">
+        #f1f5f8
+      </span>
+    </h2>
+    <div class="container">
+      <button type="button" id="btn" class="btn btn-hero">Haz click</button>
+    </div>
+    </main>
   </body>
 </html>
