--- a/index.html
+++ b/index.html
@@ -11,18 +11,17 @@
     <script defer src="app.js"></script>
   </head>
   <body>
-    <nav >
+    <nav>
       <div class="nav-center">
         <h4>color flipper</h4>
         <ul class="nav-links">
           <li><a href="index.html">simple</a></li>
           <li><a href="hex.html">hex</a></li>
-          <li><a href="rgb.html">rgb</a></li>
-          <li><a href="hsl.html">hsl</a></li>
         </ul>
       </div>
+    </nav>
     <main>
-      <h1>color flipper</h1>
+      <h1>Simple</h1>
     <h2>Color de fondo
       <span class="color">
         #f1f5f8
