--- a/hex.html
+++ b/hex.html
@@ -23,6 +23,7 @@
       </div>
     </nav>
     <main>
+      <h1>Hexadecimal</h1>
       <div class="container">
         <h2>background color : <span class="color">#f1f5f8</span></h2>
         <button class="btn btn-hero" id="btn">click me</button>
